# fastapi-playground

./: README.md  pyproject.toml
welcome/: main.py
